# lithon

./: .pylintrc  README.rst  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: config.yml
docs/: api.rst  conf.py  index.rst  installation.rst
examples/: lichess_bot.py
lichess/: __init__.py  bot.py  client.py  endpoints.py  exceptions.py  models.py  utils.py
